src/test/should_panic/array_map_empty.stderr
error: proc macro panicked
 --> src/test/should_panic/array_map_empty.rs:2:5
  |
2 |     linear_collections_macros::array_map![];
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Input may not be empty
