src/test/should_panic/array_map_empty.rs
pub fn main() {
    linear_collections_macros::array_map![];
}
